--- a/mijn-werk.html
+++ b/mijn-werk.html
@@ -12,7 +12,7 @@
 
 <body>
     <header>
-        <a href="/">
+        <a href="#">
             <h1>Ine <strong>van den Hoven</strong></h1>
         </a>
         <nav>
@@ -21,10 +21,10 @@
             </div>
             <ul class="menu">
                 <li>
-                    <a href="/over-mij.html">Over mij</a>
+                    <a href="over-mij.html">Over mij</a>
                 </li>
                 <li>
-                    <a href="/mijn-werk.html">Mijn werk</a>
+                    <a href="mijn-werk.html">Mijn werk</a>
                 </li>
                 <li>
                     <a href="mailto:inevdhoven@gmail.com">inevdhoven@gmail.com</a>
@@ -44,93 +44,93 @@
             <h2>Schoolopdrachten</h2>
             <ul>
                 <li class="archive_item">
-                    <a href="/rijksmuseum.html">
+                    <a href="rijksmuseum.html">
                         <h3>Rijksmuseum Art Experience</h3>
                         <div>
-                            <img src="/images/rijksmuseum_header.png" alt="Rijksmuseum Art Experience" loading="lazy">
+                            <img src="images/rijksmuseum_header.png" alt="Rijksmuseum Art Experience" loading="lazy">
                         </div>
                     </a>
                 </li>
                 <li class="archive_item">
-                    <a href="/css-divoom-ditoo.html">
+                    <a href="css-divoom-ditoo.html">
                         <h3>CSS Divoom Ditoo</h3>
                         <div>
-                            <img src="/images/css_divoom_ditoo_header.png" alt="CSS Divoom Ditoo" loading="lazy">
+                            <img src="images/css_divoom_ditoo_header.png" alt="CSS Divoom Ditoo" loading="lazy">
                         </div>
                     </a>
                 </li>
                 <li class="archive_item">
-                    <a href="/energie-besparen.html">
+                    <a href="energie-besparen.html">
                         <h3>Energie besparen? Gebruik deze 5 tips die niet te veel geld kosten.</h3>
                         <div>
-                            <img src="/images/meesterproefvid_header.png"
+                            <img src="images/meesterproefvid_header.png"
                                 alt="Energie besparen? Gebruik deze 5 tips die niet te veel geld kosten."
                                 loading="lazy">
                         </div>
                     </a>
                 </li>
                 <li class="archive_item">
-                    <a href="/happy-green-planet.html">
+                    <a href="happy-green-planet.html">
                         <h3>Happy Green Planet</h3>
                         <div>
-                            <img src="/images/happy_green_planet_header.png" alt="Happy Green Planet" loading="lazy">
+                            <img src="images/happy_green_planet_header.png" alt="Happy Green Planet" loading="lazy">
                         </div>
                     </a>
                 </li>
                 <li class="archive_item">
-                    <a href="/city-trip.html">
+                    <a href="city-trip.html">
                         <h3>City Trip.</h3>
                         <div>
-                            <img src="/images/citytrip_header.png" alt="City Trip App" loading="lazy">
+                            <img src="images/citytrip_header.png" alt="City Trip App" loading="lazy">
                         </div>
                     </a>
                 </li>
 
                 <li class="archive_item">
-                    <a href="/plog-de-dag.html">
+                    <a href="plog-de-dag.html">
                         <h3>Plog de dag</h3>
                         <div>
-                            <img src="/images/plogdedag_header.png" alt="Plog de Dag Website" loading="lazy">
+                            <img src="images/plogdedag_header.png" alt="Plog de Dag Website" loading="lazy">
                         </div>
                     </a>
                 </li>
                 <li class="archive_item">
-                    <a href="/loavies.html">
+                    <a href="loavies.html">
                         <h3>Loavies webshop nabouwen</h3>
                         <div>
-                            <img src="/images/loavies_header.png" alt="Loavies nabouwen" loading="lazy">
+                            <img src="images/loavies_header.png" alt="Loavies nabouwen" loading="lazy">
                         </div>
                     </a>
                 </li>
                 <li class="archive_item">
-                    <a href="/js-spelletje.html">
+                    <a href="js-spelletje.html">
                         <h3>Javascript spelletje</h3>
                         <div>
-                            <img src="/images/js_spelletje_header.png" alt="JavaScript spelletje" loading="lazy">
+                            <img src="images/js_spelletje_header.png" alt="JavaScript spelletje" loading="lazy">
                         </div>
                     </a>
                 </li>
                 <li class="archive_item">
-                    <a href="/bibliotheek-app.html">
+                    <a href="bibliotheek-app.html">
                         <h3>Bibliotheek app</h3>
                         <div>
-                            <img src="/images/vid_header.png" alt="Bibliotheek app" loading="lazy">
+                            <img src="images/vid_header.png" alt="Bibliotheek app" loading="lazy">
                         </div>
                     </a>
                 </li>
                 <li class="archive_item">
-                    <a href="/pinned.html">
+                    <a href="pinned.html">
                         <h3>Pinned</h3>
                         <div>
-                            <img src="/images/pinned_header.png" alt="Pinned App" loading="lazy">
+                            <img src="images/pinned_header.png" alt="Pinned App" loading="lazy">
                         </div>
                     </a>
                 </li>
                 <li class="archive_item">
-                    <a href="/noted.html">
+                    <a href="noted.html">
                         <h3>Noted</h3>
                         <div>
-                            <img src="/images/noted_header.png" alt="Noted App" loading="lazy">
+                            <img src="images/noted_header.png" alt="Noted App" loading="lazy">
                         </div>
                     </a>
                 </li>
