--- a/pinned.html
+++ b/pinned.html
@@ -12,7 +12,7 @@
 
 <body>
   <header>
-    <a href="/">
+    <a href="#">
       <h1>Ine <strong>van den Hoven</strong></h1>
     </a>
     <nav>
@@ -21,10 +21,10 @@
       </div>
       <ul class="menu">
         <li>
-          <a href="/over-mij.html">Over mij</a>
+          <a href="over-mij.html">Over mij</a>
         </li>
         <li>
-          <a href="/mijn-werk.html">Mijn werk</a>
+          <a href="mijn-werk.html">Mijn werk</a>
         </li>
         <li>
           <a href="mailto:inevdhoven@gmail.com">inevdhoven@gmail.com</a>
@@ -36,7 +36,7 @@
     <section class="header-work-next">
       <h1>Pinned</h1>
       <div>
-        <img src="/images/pinned_header.png" alt="Pinned App homepage">
+        <img src="images/pinned_header.png" alt="Pinned App homepage">
       </div>
     </section>
     <section>
@@ -60,7 +60,7 @@
             allemaal helemaal wat anders gingen ontwerpen. Hier kun je schetsen zien die ik heb gemaakt voor de app.</p>
         </div>
         <div class="image">
-          <img src="/images/pinned_schetsen.jpeg" alt="Schetsen van de app">
+          <img src="images/pinned_schetsen.jpeg" alt="Schetsen van de app">
         </div>
       </article>
       <article>
@@ -74,7 +74,7 @@
               target="_blank" rel="noopener">Bekijk prototype</a></p>
         </div>
         <div class="image">
-          <img src="/images/pinned_overview.PNG" alt="Overzicht schermen van de app Pinned">
+          <img src="images/pinned_overview.PNG" alt="Overzicht schermen van de app Pinned">
         </div>
       </article>
       <article>
