--- a/bibliotheek-app.html
+++ b/bibliotheek-app.html
@@ -12,7 +12,7 @@
 
 <body>
   <header>
-    <a href="/">
+    <a href="#">
       <h1>Ine <strong>van den Hoven</strong></h1>
     </a>
     <nav>
@@ -21,10 +21,10 @@
       </div>
       <ul class="menu">
         <li>
-          <a href="/over-mij.html">Over mij</a>
+          <a href="over-mij.html">Over mij</a>
         </li>
         <li>
-          <a href="/mijn-werk.html">Mijn werk</a>
+          <a href="mijn-werk.html">Mijn werk</a>
         </li>
         <li>
           <a href="mailto:inevdhoven@gmail.com">inevdhoven@gmail.com</a>
@@ -36,7 +36,7 @@
     <section class="header-work-next">
       <h1>Bibliotheek app</h1>
       <div>
-        <img src="/images/vid_header.png" alt="Ipad met openingscherm van de bibliotheek app">
+        <img src="images/vid_header.png" alt="Ipad met openingscherm van de bibliotheek app">
       </div>
     </section>
     <section>
@@ -59,7 +59,7 @@
             mijn ontwerp wil ik dus veel gebruik gaan maken van ronde vormen.</p>
         </div>
         <div class="image">
-          <img src="/images/vid_moodboard.jpeg" alt="Moodboard doelgroep middelbare schoollieren">
+          <img src="images/vid_moodboard.jpeg" alt="Moodboard doelgroep middelbare schoollieren">
         </div>
       </article>
 
@@ -70,7 +70,7 @@
             deze ideeën heb ik schetsen gemaakt. De beste ideeën heb ik uiteindelijk verder uitgewerkt.</p>
         </div>
         <div class="image">
-          <img src="/images/vid_schetsen.jpeg" alt="">
+          <img src="images/vid_schetsen.jpeg" alt="">
         </div>
       </article>
       <article>
@@ -82,7 +82,7 @@
               target="_blank">Bekijk ontwerp</a></p>
         </div>
         <div class="image">
-          <img src="/images/vid_overview.PNG" alt="Overzicht schermen van de app">
+          <img src="images/vid_overview.PNG" alt="Overzicht schermen van de app">
         </div>
       </article>
       <article>
