--- a/city-trip.html
+++ b/city-trip.html
@@ -12,7 +12,7 @@
 
 <body>
   <header>
-    <a href="/">
+    <a href="#">
       <h1>Ine <strong>van den Hoven</strong></h1>
     </a>
     <nav>
@@ -21,10 +21,10 @@
       </div>
       <ul class="menu">
         <li>
-          <a href="/over-mij.html">Over mij</a>
+          <a href="over-mij.html">Over mij</a>
         </li>
         <li>
-          <a href="/mijn-werk.html">Mijn werk</a>
+          <a href="mijn-werk.html">Mijn werk</a>
         </li>
         <li>
           <a href="mailto:inevdhoven@gmail.com">inevdhoven@gmail.com</a>
@@ -36,7 +36,7 @@
     <section class="header-work-next">
       <h1>City Trip.</h1>
       <div>
-        <img src="/images/citytrip_header.png" alt="Desktop en mobiele versie van City Trip">
+        <img src="images/citytrip_header.png" alt="Desktop en mobiele versie van City Trip">
       </div>
     </section>
     <section>
@@ -82,7 +82,7 @@
             kunnen volgen.</p>
         </div>
         <div class="image">
-          <img src="/images/citytrip_screens.png" alt="Mobiele versie van route naar sight seeing">
+          <img src="images/citytrip_screens.png" alt="Mobiele versie van route naar sight seeing">
         </div>
       </article>
       <article>
@@ -93,8 +93,6 @@
             customer journey map, het schijven van een user scenario en het maken van een persona. Uit deze
             verschillende methodes kwamen dingen die ik kon gaan verwerken in mijn lofi ontwerp en uiteindelijk in mijn
             hifi ontwerp waarvan je hier nu verschillende schermen ziet.</p>
-        </div>
-        <div class="image">
         </div>
       </article>
     </section>
