--- a/css-divoom-ditoo.html
+++ b/css-divoom-ditoo.html
@@ -12,7 +12,7 @@
 
 <body>
   <header>
-    <a href="/">
+    <a href="#">
       <h1>Ine <strong>van den Hoven</strong></h1>
     </a>
     <nav>
@@ -21,10 +21,10 @@
       </div>
       <ul class="menu">
         <li>
-          <a href="/over-mij.html">Over mij</a>
+          <a href="over-mij.html">Over mij</a>
         </li>
         <li>
-          <a href="/mijn-werk.html">Mijn werk</a>
+          <a href="mijn-werk.html">Mijn werk</a>
         </li>
         <li>
           <a href="mailto:inevdhoven@gmail.com">inevdhoven@gmail.com</a>
@@ -37,7 +37,7 @@
       <h1>
         CSS Divoom Ditoo </h1>
       <div>
-        <img src="/images/css_divoom_ditoo_header.png" alt="Divoom Ditoo gemaakt van CSS met pacman animatie">
+        <img src="images/css_divoom_ditoo_header.png" alt="Divoom Ditoo gemaakt van CSS met pacman animatie">
       </div>
     </section>
     <section>
@@ -63,7 +63,7 @@
           <p><a href="https://inevdhoven.github.io/CSS-Divoom-Ditoo/">Bekijk het project</a></p>
         </div>
         <div class="image">
-          <img src="/images/css_divoom_ditoo2.png" alt="Divoom Ditoo gemaakt van CSS met hart animatie">
+          <img src="images/css_divoom_ditoo2.png" alt="Divoom Ditoo gemaakt van CSS met hart animatie">
         </div>
       </article>
     </section>
