--- a/energie-besparen.html
+++ b/energie-besparen.html
@@ -12,7 +12,7 @@
 
 <body>
   <header>
-    <a href="/">
+    <a href="#">
       <h1>Ine <strong>van den Hoven</strong></h1>
     </a>
     <nav>
@@ -21,10 +21,10 @@
       </div>
       <ul class="menu">
         <li>
-          <a href="/over-mij.html">Over mij</a>
+          <a href="over-mij.html">Over mij</a>
         </li>
         <li>
-          <a href="/mijn-werk.html">Mijn werk</a>
+          <a href="mijn-werk.html">Mijn werk</a>
         </li>
         <li>
           <a href="mailto:inevdhoven@gmail.com">inevdhoven@gmail.com</a>
@@ -37,7 +37,7 @@
       <h1>
         Energie besparen? Gebruik deze 5 tips die niet te veel geld kosten. </h1>
       <div>
-        <img src="/images/meesterproefvid_header.png" alt="Darkmode header van website Energie besparen?">
+        <img src="images/meesterproefvid_header.png" alt="Darkmode header van website Energie besparen?">
       </div>
     </section>
     <section>
@@ -75,7 +75,7 @@
             vindt, maar als je op light mode versie komt krijg je wel een melding dat dit meer energie kost.</p>
         </div>
         <div class="image">
-          <img src="/images/meesterproef_3d_objects.png" alt="De 3D objecten die ik heb gemaakt voor de website">
+          <img src="images/meesterproef_3d_objects.png" alt="De 3D objecten die ik heb gemaakt voor de website">
         </div>
       </article>
       <article>
@@ -85,7 +85,7 @@
           <p><a href="https://inevdhoven.github.io/Meesterproef/">Bekijk website</a></p>
         </div>
         <div class="image">
-          <img src="/images/meesterproefvid_dark_lightmode.png" alt="">
+          <img src="images/meesterproefvid_dark_lightmode.png" alt="">
         </div>
       </article>
     </section>
