--- a/happy-green-planet.html
+++ b/happy-green-planet.html
@@ -12,7 +12,7 @@
 
 <body>
   <header>
-    <a href="/">
+    <a href="#">
       <h1>Ine <strong>van den Hoven</strong></h1>
     </a>
     <nav>
@@ -21,10 +21,10 @@
       </div>
       <ul class="menu">
         <li>
-          <a href="/over-mij.html">Over mij</a>
+          <a href="over-mij.html">Over mij</a>
         </li>
         <li>
-          <a href="/mijn-werk.html">Mijn werk</a>
+          <a href="mijn-werk.html">Mijn werk</a>
         </li>
         <li>
           <a href="mailto:inevdhoven@gmail.com">inevdhoven@gmail.com</a>
@@ -37,7 +37,7 @@
       <h1>
         Happy Green Planet </h1>
       <div>
-        <img src="/images/happy_green_planet_header.png" alt="Homepage van Happy Green Planet op een laptop">
+        <img src="images/happy_green_planet_header.png" alt="Homepage van Happy Green Planet op een laptop">
       </div>
     </section>
     <section>
@@ -68,7 +68,7 @@
           <p>&nbsp;</p>
         </div>
         <div class="image">
-          <img src="/images/happy_green_planet_moodboard.jpeg" alt="Moodboard van de stijl voor Happy Green Planet">
+          <img src="images/happy_green_planet_moodboard.jpeg" alt="Moodboard van de stijl voor Happy Green Planet">
         </div>
       </article>
       <article>
