--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <header>
-        <a href="/">
+        <a href="#">
             <h1>Ine <strong>van den Hoven</strong></h1>
         </a>
         <nav>
@@ -21,10 +21,10 @@
             </div>
             <ul class="menu">
                 <li>
-                    <a href="/over-mij.html">Over mij</a>
+                    <a href="over-mij.html">Over mij</a>
                 </li>
                 <li>
-                    <a href="/mijn-werk.html">Mijn werk</a>
+                    <a href="mijn-werk.html">Mijn werk</a>
                 </li>
                 <li>
                     <a href="mailto:inevdhoven@gmail.com">inevdhoven@gmail.com</a>
@@ -37,8 +37,8 @@
             <h2>Hoii, mijn naam is <strong>Ine van den Hoven</strong></h2>
             <h2>Ik <strong>ontwerp</strong> en <strong>bouw</strong> websites</h2>
             <div class="buttons">
-                <a href="/images/cv.pdf" class="button" target="_blank">Bekijk CV</a>
-                <a href="/mijn-werk.html" class="button">Bekijk mijn werk</a>
+                <a href="images/cv.pdf" class="button" target="_blank">Bekijk CV</a>
+                <a href="mijn-werk.html" class="button">Bekijk mijn werk</a>
             </div>
         </section>
         <section class="text-block">
@@ -51,7 +51,7 @@
                     bezig met de Minor Web Design &amp; Development. Bij de Minor Web Design &amp; Development ben ik
                     veel aan het leren over HTML, CSS en JavaScript. Zo heb bijvoorbeeld in drie weken al een Single
                     Page App gemaakt genaamd Rijksmuseum Art Experience. Deze kun je terug vinden onder mijn werk.</p>
-                <a href="/over-mij.html" class="button">Wil je meer weten?</a>
+                <a href="over-mij.html" class="button">Wil je meer weten?</a>
             </div>
             <div class="image">
                 <img src="images/profile_picture.jpeg" alt="Foto van Ine van den Hoven">
@@ -61,7 +61,7 @@
             <h2>Mijn werk</h2>
             <ul>
                 <li>
-                    <a href="/rijksmuseum.html">
+                    <a href="rijksmuseum.html">
                         <h3>Rijksmuseum Art Experience</h3>
                         <div>
                             <img src="images/rijksmuseum_header.png" alt="Rijksmuseum Art Experience" loading="lazy">
@@ -69,7 +69,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="/css-divoom-ditoo.html">
+                    <a href="css-divoom-ditoo.html">
                         <h3>CSS Divoom Ditoo</h3>
                         <div>
                             <img src="images/css_divoom_ditoo_header.png" alt="CSS Divoom Ditoo" loading="lazy">
@@ -77,7 +77,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="/energie-besparen.html">
+                    <a href="energie-besparen.html">
                         <h3>Energie besparen? Gebruik deze 5 tips die niet te veel geld kosten.</h3>
                         <div>
                             <img src="images/meesterproefvid_header.png" alt="Energie Besparen?" loading="lazy">
@@ -85,7 +85,7 @@
                     </a>
                 </li>
             </ul>
-            <a href="/mijn-werk.html" class="button">Bekijk mijn werk</a>
+            <a href="mijn-werk.html" class="button">Bekijk mijn werk</a>
         </section>
     </main>
     <footer>
