--- a/js-spelletje.html
+++ b/js-spelletje.html
@@ -12,7 +12,7 @@
 
 <body>
   <header>
-    <a href="/">
+    <a href="#">
       <h1>Ine <strong>van den Hoven</strong></h1>
     </a>
     <nav>
@@ -21,10 +21,10 @@
       </div>
       <ul class="menu">
         <li>
-          <a href="/over-mij.html">Over mij</a>
+          <a href="over-mij.html">Over mij</a>
         </li>
         <li>
-          <a href="/mijn-werk.html">Mijn werk</a>
+          <a href="mijn-werk.html">Mijn werk</a>
         </li>
         <li>
           <a href="mailto:inevdhoven@gmail.com">inevdhoven@gmail.com</a>
@@ -36,7 +36,7 @@
     <section class="header-work-next">
       <h1>Javascript spelletje </h1>
       <div>
-        <img src="/images/js_spelletje_header.png" alt="Screenshop van het spelletje">
+        <img src="images/js_spelletje_header.png" alt="Screenshop van het spelletje">
       </div>
     </section>
     <section>
@@ -49,7 +49,7 @@
             HTMl, CSS en vanilla JavaScript.</p>
         </div>
         <div class="image">
-          <img src="/images/js_spelletje_schets.png" alt="Schets van het spelletje poppetje bij de kledingkast">
+          <img src="images/js_spelletje_schets.png" alt="Schets van het spelletje poppetje bij de kledingkast">
         </div>
       </article>
       <article>
@@ -61,7 +61,7 @@
               website</a></p>
         </div>
         <div class="image">
-          <img src="/images/js_spelletje_schets2.png" alt="Schets van het spelletje poppetje in werkkamer">
+          <img src="images/js_spelletje_schets2.png" alt="Schets van het spelletje poppetje in werkkamer">
         </div>
       </article>
     </section>
