--- a/noted.html
+++ b/noted.html
@@ -12,7 +12,7 @@
 
 <body>
   <header>
-    <a href="/">
+    <a href="#">
       <h1>Ine <strong>van den Hoven</strong></h1>
     </a>
     <nav>
@@ -21,10 +21,10 @@
       </div>
       <ul class="menu">
         <li>
-          <a href="/over-mij.html">Over mij</a>
+          <a href="over-mij.html">Over mij</a>
         </li>
         <li>
-          <a href="/mijn-werk.html">Mijn werk</a>
+          <a href="mijn-werk.html">Mijn werk</a>
         </li>
         <li>
           <a href="mailto:inevdhoven@gmail.com">inevdhoven@gmail.com</a>
@@ -36,7 +36,7 @@
     <section class="header-work-next">
       <h1>Noted.</h1>
       <div>
-        <img src="/images/noted_header.png" alt="Beginscherm als je de app opent">
+        <img src="images/noted_header.png" alt="Beginscherm als je de app opent">
       </div>
     </section>
     <section>
@@ -50,7 +50,7 @@
             wanneer welke feestdag is en een stukje over de geschiedenis.</p>
         </div>
         <div class="image">
-          <img src="/images/noted_flowchart.jpg" alt="Overzicht hoe waar je kunt klikken">
+          <img src="images/noted_flowchart.jpg" alt="Overzicht hoe waar je kunt klikken">
         </div>
       </article>
       <article>
@@ -65,7 +65,7 @@
           <p><a href="https://oege.ie.hva.nl/~hoveni/prototype/" target="_blank" rel="noopener">Bekijk website</a></p>
         </div>
         <div class="image">
-          <img src="/images/noted_app.png" alt="Overzicht van de schermen">
+          <img src="images/noted_app.png" alt="Overzicht van de schermen">
         </div>
       </article>
     </section>
