--- a/plog-de-dag.html
+++ b/plog-de-dag.html
@@ -12,7 +12,7 @@
 
 <body>
   <header>
-    <a href="/">
+    <a href="#">
       <h1>Ine <strong>van den Hoven</strong></h1>
     </a>
     <nav>
@@ -21,10 +21,10 @@
       </div>
       <ul class="menu">
         <li>
-          <a href="/over-mij.html">Over mij</a>
+          <a href="over-mij.html">Over mij</a>
         </li>
         <li>
-          <a href="/mijn-werk.html">Mijn werk</a>
+          <a href="mijn-werk.html">Mijn werk</a>
         </li>
         <li>
           <a href="mailto:inevdhoven@gmail.com">inevdhoven@gmail.com</a>
@@ -37,7 +37,7 @@
       <h1>
         Plog de dag </h1>
       <div>
-        <img src="/images/plogdedag_header.png" alt="Desktop en mobiele versie van de website plog de dag">
+        <img src="images/plogdedag_header.png" alt="Desktop en mobiele versie van de website plog de dag">
       </div>
     </section>
     <section>
@@ -63,7 +63,7 @@
           </p>
         </div>
         <div class="image">
-          <img src="/images/plogdedag_logo.png" alt="Gemaakte logo Plog de dag">
+          <img src="images/plogdedag_logo.png" alt="Gemaakte logo Plog de dag">
         </div>
       </article>
       <article>
@@ -79,7 +79,7 @@
             resultaat geworden.</p>
         </div>
         <div class="image">
-          <img src="/images/plogdedag_mobile.png" alt="Mobiele versie Plog de dag">
+          <img src="images/plogdedag_mobile.png" alt="Mobiele versie Plog de dag">
         </div>
       </article>
       <article>
@@ -93,7 +93,7 @@
             opvallen en de bezoeker kan inspireren.</p>
         </div>
         <div class="image">
-          <img src="/images/plogdedag_desktop.png" alt="Desktop versie Plog de dag">
+          <img src="images/plogdedag_desktop.png" alt="Desktop versie Plog de dag">
         </div>
       </article>
       <article>
@@ -103,8 +103,6 @@
             kijken hoe het logo er uitziet als het klein weergegeven moet worden. Ook heb ik veel geleerd over het
             ontwerpen voor een responsive one-page, zoals over consistentie, het plaatsen van tekst, afbeeldingen en
             qoutes.</p>
-        </div>
-        <div class="image">
         </div>
       </article>
     </section>
