--- a/rijksmuseum.html
+++ b/rijksmuseum.html
@@ -12,7 +12,7 @@
 
 <body>
   <header>
-    <a href="/">
+    <a href="#">
       <h1>Ine <strong>van den Hoven</strong></h1>
     </a>
     <nav>
@@ -21,10 +21,10 @@
       </div>
       <ul class="menu">
         <li>
-          <a href="/over-mij.html">Over mij</a>
+          <a href="over-mij.html">Over mij</a>
         </li>
         <li>
-          <a href="/mijn-werk.html">Mijn werk</a>
+          <a href="mijn-werk.html">Mijn werk</a>
         </li>
         <li>
           <a href="mailto:inevdhoven@gmail.com">inevdhoven@gmail.com</a>
@@ -36,7 +36,7 @@
     <section class="header-work-under">
       <h1>Rijksmuseum Art Experience</h1>
       <div>
-        <img src="/images/rijksmuseum_header.png" alt="Schermen van de Rijksmuseum Art Experience">
+        <img src="images/rijksmuseum_header.png" alt="Schermen van de Rijksmuseum Art Experience">
       </div>
     </section>
     <section>
