--- a/over-mij.html
+++ b/over-mij.html
@@ -12,7 +12,7 @@
 
 <body class="over-mij">
     <header>
-        <a href="#">
+        <a href="/Portfolio/">
             <h1>Ine <strong>van den Hoven</strong></h1>
         </a>
         <nav>
