--- a/pinned.html
+++ b/pinned.html
@@ -12,7 +12,7 @@
 
 <body>
   <header>
-    <a href="#">
+    <a href="/Portfolio/">
       <h1>Ine <strong>van den Hoven</strong></h1>
     </a>
     <nav>
