--- a/city-trip.html
+++ b/city-trip.html
@@ -10,7 +10,7 @@
   <script defer src="js/script.js"></script>
 </head>
 
-<body>
+<body class="city-trip">
   <header>
     <a href="/Portfolio/">
       <h1>Ine <strong>van den Hoven</strong></h1>
